# taskflow

./: .gitignore  README.md  pyproject.toml
data/: taskflow.db
src/taskflow/: __init__.py  __main__.py  db.py  init_db.py  ui.py
src/taskflow.egg-info/: PKG-INFO  SOURCES.txt
taskflow/: .gitignore
taskflow/src/taskflow/: init_db.py
